@@ -9,6 +9,10 @@ Version 7.43-rc1 - not yet released
 * data files
   - reworked sgs-233 polar
   - new topology available from mapgen (incl rivers)
+* data files
+  - fix problem (introduced in v7.42) of first waypoint in user.cup waypoint
+    file being ignored or being overwritten by “New” or “Import” from the
+    Waypoint Editor dialog
 * documentation
   - clarify task speed calculation section
 
@@ -31,7 +35,7 @@ Version 7.43-rc0 - 2024-06-02
   - infobox management page rename buttons for copying sets
   - consistent naming of ok/close buttons and placement
   - add PanTo button to waypoints dialog if opened from task related infoboxen
-* devices
+ devices
   - add Larus driver
 * windows
  - black text color in airspace list like all other systems
